--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
+TMDB_API_KEY="6a98ac965381628130eea33299871e74"
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
