Penambahan macam sorting film

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 TMDB_API_KEY="6a98ac965381628130eea33299871e74"
+IMAGE_BASE_URL="http://image.tmdb.org/t/p/w300"
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
