--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     buildTypes {
         debug {
             buildConfigField "String", "TMDB_API_KEY", TMDB_API_KEY
-            buildConfigField "String", "IMAGE_BASE_URL", IMAGE_BASE_URL
+
         }
         release {
             minifyEnabled false
@@ -41,4 +41,5 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation "androidx.fragment:fragment:1.3.0-beta01"
+    implementation 'com.google.android.material:material:1.2.1'
 }
